--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="navigationView_item_androidKotlin">Android Kotlin</string>
     <string name="navigationView_item_androidThings">Android Things</string>
 
+    <!-- PlaylistFragment -->
+    <string name="playlistFragment_textView_loading">Loading</string>
 </resources>
